--- a/cicsia-nx-monorepo-workspace/package.json
+++ b/cicsia-nx-monorepo-workspace/package.json
@@ -37,22 +37,33 @@
     "@swc-node/register": "~1.9.1",
     "@swc/core": "~1.5.7",
     "@swc/helpers": "~0.5.11",
+    "@types/glob": "^8.1.0",
     "@types/jest": "^29.5.12",
+    "@types/mocha": "^10.0.10",
     "@types/node": "18.16.9",
+    "@types/vscode": "^1.100.0",
     "@typescript-eslint/utils": "^8.19.0",
+    "@vscode/test-electron": "^2.5.2",
     "angular-eslint": "^19.2.0",
     "eslint": "^9.8.0",
     "eslint-config-prettier": "^10.0.0",
     "eslint-plugin-playwright": "^1.6.2",
+    "glob": "^11.0.2",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
     "jest-preset-angular": "~14.4.0",
+    "mocha": "^11.3.0",
     "nx": "21.0.3",
     "prettier": "^2.6.2",
     "ts-jest": "^29.1.0",
+    "ts-loader": "^9.5.2",
     "ts-node": "10.9.1",
     "tslib": "^2.3.0",
     "typescript": "~5.7.2",
-    "typescript-eslint": "^8.19.0"
+    "typescript-eslint": "^8.19.0",
+    "vsce": "^2.15.0",
+    "vscode-test": "^1.6.1",
+    "webpack": "^5.99.8",
+    "webpack-cli": "^6.0.1"
   }
 }
