Add cicsia-nx-monorepo-workspace/apps/cicsia-vscode-extension-for-zowe/package.json 1747470089896

--- a/cicsia-nx-monorepo-workspace/apps/cicsia-vscode-extension-for-zowe/package.json
+++ b/cicsia-nx-monorepo-workspace/apps/cicsia-vscode-extension-for-zowe/package.json
@@ -9,7 +9,10 @@
   "categories": [
     "Other"
   ],
-  "activationEvents": [],
+  "activationEvents": [
+    "onCommand:cicsia-vscode-extension-for-zowe.helloWorld",
+    "onCommand:cicsia-vscode-extension-for-zowe.showInfo"
+  ],
   "main": "./dist/extension.js",
   "contributes": {
     "commands": [
